--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@
 
 *Log*
 
-/n./ a portion or length of the trunk or of a larg limb of a felled tree
+/n./ a portion or length of the trunk or of a large limb of a felled tree
 
 Stump is a *logging utility for Python* that uses the [[https://docs.python.org/3/library/logging.html][logging module]] under the
 covers. However, a stump is a different part of a tree than a log and as such
